# loggirus

./: .clang-format  .clangd  CMakeLists.txt  Justfile  README.md  compile.sh  concurrent_queue.hpp  formatter.hpp  level.hpp  log_message.hpp  loggirus.cpp  loggirus.h  loggirus.hpp  main.cpp  rand_well.hpp  run.sh  worker_thread.hpp
loggirus/include/loggirus/: concurrent_queue.hpp  formatter.hpp  level.hpp  log_message.hpp  loggirus.hpp  rand_well.hpp  worker_thread.hpp
